Bug 70270 - [Baytrail-M Regression ] machine boot up with Call Trace by plugging both VGA and eDP
Summary: [Baytrail-M Regression ] machine boot up with Call Trace by plugging both VGA...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-08 07:46 UTC by shui yangwei
Modified: 2017-10-06 14:42 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg: boot up call trace with VGA pipe (120.10 KB, text/plain)
2013-10-08 07:46 UTC, shui yangwei
no flags Details
dmesg: latest -next-queued kernel (118.16 KB, text/plain)
2013-10-08 08:05 UTC, shui yangwei
no flags Details
Fix (1.13 KB, patch)
2013-10-09 13:45 UTC, Ville Syrjala
no flags Details | Splinter Review

Description shui yangwei 2013-10-08 07:46:23 UTC
Created attachment 87264 [details]
dmesg: boot up call trace with VGA pipe

Description:
-----------------------
If VGA plugged in, machine boot up with call trace. I also tried only eDP plugged, there's no this issue. 


Bisect Result:
-----------------------
1d5b80e5bcd2cb7333bbc1fa8abb8c5a55a870b5 is the first bad commit
commit 1d5b80e5bcd2cb7333bbc1fa8abb8c5a55a870b5
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Sat Oct 5 16:13:56 2013 +0300

    drm/i915/dp: promote clock recovery failures to DRM_ERROR

    If channel equalization succeeds, there's no indication something went
    wrong in clock recovery (unless debug is enabled). We should shout about
    the failures and fix them instead of hiding them under the carpet.

    This has allowed bugs like [1] stay dormant for a long time.

    [1] https://bugs.freedesktop.org/show_bug.cgi?id=70117

    Signed-off-by: Jani Nikula <jani.nikula@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>

:040000 040000 81194e365f1abc4f55222044b892f5391ecf05fe e6ac8f1eb807dc1fba4efac4914b1b84f0f0e9bb M    drivers


Call Trace:
--------------------------
[    2.494129] [drm:i9xx_crtc_clock_get], Unknown DPLL mode 00000000 in programmed mod
e
[    2.494133] [drm:intel_pipe_config_compare] *ERROR* mismatch in clock (expected 148
500, found 0)
[    2.494134] ------------[ cut here ]------------
[    2.494172] WARNING: CPU: 1 PID: 1172 at drivers/gpu/drm/i915/intel_display.c:8769
check_crtc_state+0x6ea/0x73b [i915]()
[    2.494173] pipe state doesn't match!
[    2.494180] Modules linked in: i915(+) drm_kms_helper drm video button
[    2.494184] CPU: 1 PID: 1172 Comm: systemd-udevd Not tainted 3.12.0-rc1_drm-intel-n
ext-queued_e04a0a_20131008+ #1
[    2.494186] Hardware name: Intel Corp. VALLEYVIEW B2 PLATFORM/NOTEBOOK, BIOS BBAYCR
B1.X64.0055.R31.1308081542 BBAY_X64_R_V0055_31 08/08/2013
[    2.494191]  0000000000000009 ffff880178ba1048 ffffffff817f2cfc ffffffff8107c97a
[    2.494195]  ffff880178ba1098 ffff880178ba1088 ffffffff81039d08 ffff880178ba1090
[    2.494199]  ffffffffa0095eda ffff88003fc77000 ffff88003fc70000 ffff88003fc70778
[    2.494200] Call Trace:
[    2.494208]  [<ffffffff817f2cfc>] dump_stack+0x46/0x58
[    2.494214]  [<ffffffff8107c97a>] ? vprintk_emit+0x427/0x48d
[    2.494220]  [<ffffffff81039d08>] warn_slowpath_common+0x81/0x9b
[    2.494251]  [<ffffffffa0095eda>] ? check_crtc_state+0x6ea/0x73b [i915]
[    2.494255]  [<ffffffff81039dc5>] warn_slowpath_fmt+0x46/0x48
[    2.494286]  [<ffffffffa0095eda>] check_crtc_state+0x6ea/0x73b [i915]
[    2.494320]  [<ffffffffa00a05ac>] intel_modeset_check_state+0x372/0x630 [i915]
[    2.494352]  [<ffffffffa00a088f>] intel_set_mode+0x25/0x2f [i915]
[    2.494384]  [<ffffffffa00a0ee8>] intel_crtc_set_config+0x64f/0x85e [i915]
[    2.494403]  [<ffffffffa001c315>] drm_mode_set_config_internal+0x56/0xcf [drm]
[    2.494410]  [<ffffffffa0062dc9>] drm_fb_helper_set_par+0x5e/0xa7 [drm_kms_helper]
[    2.494415]  [<ffffffff813a2af9>] fbcon_init+0x320/0x41d
[    2.494420]  [<ffffffff813f6a3e>] visual_init+0xbc/0x112
Comment 1 shui yangwei 2013-10-08 08:05:34 UTC
Created attachment 87268 [details]
dmesg: latest -next-queued kernel

Latest -next-queued kernel:
------------------------
Kernel: (drm-intel-nightly)7feaa977a8f76312e02d916a071b7a4c0140ffcd
Some additional commit info:
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Oct 1 18:02:21 2013 +0300

    drm/i915: Flush primary plane changes in sprite code


Description:
------------------------
On latest -next-queued, the call trace is not quite the same with first bad. I have found some good commit, and the dmesg is clean, so I judge one commit is bad if the dmesg is dirty. Anything needed, please comment.


Call Trace
------------------------
[    1.748887] [drm:i9xx_update_plane], Writing base 00073000 00000000 0 0 7680
[    1.748900] [drm:intel_edp_psr_match_conditions], PSR not supported on this platform
[    1.748914] [drm:intel_crtc_mode_set], [ENCODER:10:DAC-10] set [MODE:0:1024x768]
[    1.749578] [drm:valleyview_update_wm], Setting FIFO watermarks - A: plane=61, cursor=6, B: plane=150, cursor=6, SR: plane=0, cursor=0
[    1.749585] ------------[ cut here ]------------
[    1.749623] WARNING: CPU: 1 PID: 1151 at drivers/gpu/drm/i915/intel_display.c:1843 intel_enable_primary_plane+0x49/0xb5 [i915]()
[    1.749623] Primary plane already enabled
[    1.749629] Modules linked in: i915(+) video button drm_kms_helper drm freq_table
[    1.749633] CPU: 1 PID: 1151 Comm: udevd Not tainted 3.12.0-rc3_drm-intel-next-queued_7feaa9_20131008_+ #610
[    1.749637]  0000000000000000 0000000000000009 ffffffff81704444 ffff88006fde7478
[    1.749639]  ffffffff8103319e 0000000200000007 ffffffffa00849e9 ffff880004ca4000
[    1.749642]  ffff880004ca4000 0000000000000001 0000000000000001 ffff880004c3b000
[    1.749643] Call Trace:
[    1.749651]  [<ffffffff81704444>] ? dump_stack+0x41/0x51
[    1.749656]  [<ffffffff8103319e>] ? warn_slowpath_common+0x73/0x8b
[    1.749686]  [<ffffffffa00849e9>] ? intel_enable_primary_plane+0x49/0xb5 [i915]
[    1.749690]  [<ffffffff8103324e>] ? warn_slowpath_fmt+0x45/0x4a
[    1.749720]  [<ffffffffa00843fc>] ? assert_pipe+0x61/0xc0 [i915]
[    1.749750]  [<ffffffffa00849e9>] ? intel_enable_primary_plane+0x49/0xb5 [i915]
[    1.749780]  [<ffffffffa0088825>] ? valleyview_crtc_enable+0x308/0x395 [i915]
[    1.749811]  [<ffffffffa008b01e>] ? __intel_set_mode+0xfd4/0x10df [i915]
Comment 2 Jani Nikula 2013-10-08 08:09:43 UTC
(In reply to comment #0)
> Bisect Result:
> -----------------------
> 1d5b80e5bcd2cb7333bbc1fa8abb8c5a55a870b5 is the first bad commit
> commit 1d5b80e5bcd2cb7333bbc1fa8abb8c5a55a870b5
> Author: Jani Nikula <jani.nikula@intel.com>
> Date:   Sat Oct 5 16:13:56 2013 +0300
> 
>     drm/i915/dp: promote clock recovery failures to DRM_ERROR

Please double check the bisect. This commit only changes a couple of DRM_DEBUG_KMS prints to DRM_ERROR, and could not cause the errors in the dmesg.
Comment 3 shui yangwei 2013-10-08 08:48:05 UTC
(In reply to comment #2)
> (In reply to comment #0)
> > Bisect Result:
> > -----------------------
> > 1d5b80e5bcd2cb7333bbc1fa8abb8c5a55a870b5 is the first bad commit
> > commit 1d5b80e5bcd2cb7333bbc1fa8abb8c5a55a870b5
> > Author: Jani Nikula <jani.nikula@intel.com>
> > Date:   Sat Oct 5 16:13:56 2013 +0300
> > 
> >     drm/i915/dp: promote clock recovery failures to DRM_ERROR
> 
> Please double check the bisect. This commit only changes a couple of
> DRM_DEBUG_KMS prints to DRM_ERROR, and could not cause the errors in the
> dmesg.


OK, I ignored some different dirty messages. Please have a look at comment 1, I re-bisect this "call trace", sorry for the mistake. The dmesg you can  reference comment 1.

-------------------------------
1c8acae33ec22ac9fa0451ea6caedf9b969f6ebe is the first bad commit
commit 1c8acae33ec22ac9fa0451ea6caedf9b969f6ebe
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Oct 1 18:02:20 2013 +0300

    drm/i915: WARN if primary plane state doesn't match expectations

    Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>

:040000 040000 380418c8acd495adf8bdc819eca652c60c12d8d9 e5221c4edd04fcbeb01345f72cd55ab90242b01a M       drivers
Comment 4 shui yangwei 2013-10-08 08:52:33 UTC
Reminder here: this call trace will be reproduceable while plugged in VGA && eDP. but each of them only will be good.
Comment 5 Daniel Vetter 2013-10-08 09:03:41 UTC
Yeah, the calltrace in comment 1 and 3 are different, the new bisect makes much more sense.

Does this issue happen only on byt or also on other platforms? I'd would be especially interesting to cross-check on a gm45 with 2 outputs, since the display hw on gm45 or pnv is very similar to byt (all the newer desktop platforms from ilk to now are _much_ different).
Comment 6 shui yangwei 2013-10-08 10:34:28 UTC
(In reply to comment #5)
> Yeah, the calltrace in comment 1 and 3 are different, the new bisect makes
> much more sense.
> 
> Does this issue happen only on byt or also on other platforms? I'd would be
> especially interesting to cross-check on a gm45 with 2 outputs, since the
> display hw on gm45 or pnv is very similar to byt (all the newer desktop
> platforms from ilk to now are _much_ different).

OK, there's a new round testing this week, and we will give you a clearly conclusion on all machine if you think it's needed. Now we are running testing, I will check gm45 and pnv tomorrow.
Comment 7 Paulo Zanoni 2013-10-08 22:16:39 UTC
(In reply to comment #1)
> [    1.748887] [drm:i9xx_update_plane], Writing base 00073000 00000000 0 0
> 7680
> [    1.748900] [drm:intel_edp_psr_match_conditions], PSR not supported on
> this platform
> [    1.748914] [drm:intel_crtc_mode_set], [ENCODER:10:DAC-10] set
> [MODE:0:1024x768]
> [    1.749578] [drm:valleyview_update_wm], Setting FIFO watermarks - A:
> plane=61, cursor=6, B: plane=150, cursor=6, SR: plane=0, cursor=0
> [    1.749585] ------------[ cut here ]------------
> [    1.749623] WARNING: CPU: 1 PID: 1151 at
> drivers/gpu/drm/i915/intel_display.c:1843
> intel_enable_primary_plane+0x49/0xb5 [i915]()
> [    1.749623] Primary plane already enabled
> [    1.749629] Modules linked in: i915(+) video button drm_kms_helper drm
> freq_table
> [    1.749633] CPU: 1 PID: 1151 Comm: udevd Not tainted
> 3.12.0-rc3_drm-intel-next-queued_7feaa9_20131008_+ #610
> [    1.749637]  0000000000000000 0000000000000009 ffffffff81704444
> ffff88006fde7478
> [    1.749639]  ffffffff8103319e 0000000200000007 ffffffffa00849e9
> ffff880004ca4000
> [    1.749642]  ffff880004ca4000 0000000000000001 0000000000000001
> ffff880004c3b000
> [    1.749643] Call Trace:
> [    1.749651]  [<ffffffff81704444>] ? dump_stack+0x41/0x51
> [    1.749656]  [<ffffffff8103319e>] ? warn_slowpath_common+0x73/0x8b
> [    1.749686]  [<ffffffffa00849e9>] ? intel_enable_primary_plane+0x49/0xb5
> [i915]
> [    1.749690]  [<ffffffff8103324e>] ? warn_slowpath_fmt+0x45/0x4a
> [    1.749720]  [<ffffffffa00843fc>] ? assert_pipe+0x61/0xc0 [i915]
> [    1.749750]  [<ffffffffa00849e9>] ? intel_enable_primary_plane+0x49/0xb5
> [i915]
> [    1.749780]  [<ffffffffa0088825>] ? valleyview_crtc_enable+0x308/0x395
> [i915]
> [    1.749811]  [<ffffffffa008b01e>] ? __intel_set_mode+0xfd4/0x10df [i915]


I also see "Primary plane already enabled" when I boot Haswell with eDP+DP.
Comment 8 shui yangwei 2013-10-09 02:49:36 UTC
I looked at pnv && gm45, both them have this issue. And the call trace is the same type.
Comment 9 Ville Syrjala 2013-10-09 13:45:33 UTC
Created attachment 87340 [details] [review]
Fix

This patch should fix the problem. Please test.
Comment 10 Paulo Zanoni 2013-10-09 14:02:16 UTC
(In reply to comment #9)
> Created attachment 87340 [details] [review] [review]
> Fix
> 
> This patch should fix the problem. Please test.

Works for me! :)
Haswell eDP+DP.
Comment 11 shui yangwei 2013-10-10 03:39:59 UTC
(In reply to comment #9)
> Created attachment 87340 [details] [review] [review]
> Fix
> 
> This patch should fix the problem. Please test.

Great! This patch also works on my device. When you insert the change into latest source, I will close it.
Comment 12 Daniel Vetter 2013-10-10 09:16:05 UTC
commit 4c5af3fb36003864f0b3f3930ee2f678ad2eb3e8
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Wed Oct 9 17:24:57 2013 +0300

    drm/i915: Populate primary_disabled in intel_modeset_readout_hw_state()
Comment 13 Li Xu 2015-02-03 02:27:37 UTC
There is no call trace any more.Close it.
Comment 14 Elizabeth 2017-10-06 14:42:43 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.